added guide for basic workflow setup

--- a/content/dev.mdx
+++ b/content/dev.mdx
@@ -4,4 +4,27 @@ description: 'Basic tools for web development'
 ---
 
 This is a compilation of tips and tricks for setting up the necessary tools for
-web development.
+web development. We will dedicate their own section to certain tools.
+
+These are some essential libraries/tools for web development:
+
+- Git
+
+```
+sudo apt install -y git
+```
+- Create ssh key
+```
+mkdir -p ~/.ssh && ssh-keygen -t ed25519 -o -a 100 -f ~/.ssh/id_ed25519 -C "TYPE_YOUR_EMAIL@HERE.com"
+# Retrieve key
+cat ~/.ssh/id_ed25519.pub
+# Check key addition
+ssh -T git@github.com
+# In case of error
+ssh-add ~/.ssh/id_ed25519
+```
+- Postgresql
+```
+sudo apt install -y postgresql postgresql-contrib libpq-dev build-essential
+sudo -u postgres psql --command "CREATE ROLE `whoami` LOGIN createdb;
+```
