--- a/content/index.mdx
+++ b/content/index.mdx
@@ -3,4 +3,4 @@ title: "Cheatsheet by Truxxu"
 description: "My go-to place to find all those useful tips and tricks needed when seting up a new machine"
 ---
 
-My go-to place to find all those useful tips and tricks needed when seting up a new machine.
+My go-to place to find all those useful tips and tricks needed when setting up a new machine.
