--- a/content/introduction.mdx
+++ b/content/introduction.mdx
@@ -1,6 +1,46 @@
 ---
-title: 'First steps'
+title: 'Essential software (Linux)'
 description: 'Essential software for a new machine'
 ---
 
-A list of essential software goes here.
+- Balena Etcher
+
+- Bleachbit
+
+- Chromium
+
+- Disks
+
+- Firefox
+
+- Gimp
+
+- Gparted
+
+- Inkscape
+
+- KeepassX
+
+- Megasync
+
+- Postman
+
+- Signal
+
+- Skype
+
+- Slack
+
+- Sublime Text 3
+
+- Terminator
+
+- Thunderbird
+
+- Tor Browser
+
+- Transmission
+
+- VLC
+
+- Youtube-dl
