--- a/content/dev/terminal.mdx
+++ b/content/dev/terminal.mdx
@@ -3,4 +3,83 @@ title: "Terminal"
 description: "Config for terminal"
 ---
 
-A terminal is fundamental in the webdev workflow.
+I am fond of working with Terminator as terminal emulator and zsh as my shell.
+So, first we need  to install these two:
+
+- Terminator
+```
+sudo apt install terminator
+```
+
+- ohmyzsh
+```
+sudo apt install -y zsh curl vim nodejs imagemagick jq
+sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
+sudo reboot
+```
+
+- ohmyzsh plugins
+> gitfast
+>
+> last-working-dir
+>
+> common-aliases
+>
+> sublime
+>
+> zsh-syntax-highlighting
+>
+> history-substring-search
+
+- zshrc config file
+```shell
+ZSH=$HOME/.oh-my-zsh
+
+# You can change the theme with another one:
+# https://github.com/robbyrussell/oh-my-zsh/wiki/themes
+ZSH_THEME="robbyrussell"
+
+# Useful plugins for Web development with Sublime Text
+plugins=(gitfast last-working-dir common-aliases sublime zsh-syntax-highlighting history-substring-search)
+
+# Prevent Homebrew from reporting - https://github.com/Homebrew/brew/blob/master/share/doc/homebrew/Analytics.md
+export HOMEBREW_NO_ANALYTICS=1
+
+# Actually load Oh-My-Zsh
+source "${ZSH}/oh-my-zsh.sh"
+unalias rm # No interactive rm by default (brought by plugins/common-aliases)
+
+# Load rbenv if installed
+export PATH="${HOME}/.rbenv/bin:${PATH}"
+type -a rbenv > /dev/null && eval "$(rbenv init -)"
+
+# Rails and Ruby uses the local `bin` folder to store binstubs.
+# So instead of running `bin/rails` like the doc says, just run `rails`
+# Same for `./node_modules/.bin` and nodejs
+export PATH="./bin:./node_modules/.bin:${PATH}:/usr/local/sbin"
+
+# Store your own aliases in the ~/.aliases file and load the here.
+[[ -f "$HOME/.aliases" ]] && source "$HOME/.aliases"
+
+# Encoding stuff for the terminal
+export LANG=en_US.UTF-8
+export LC_ALL=en_US.UTF-8
+export BUNDLER_EDITOR="subl $@ >/dev/null 2>&1 -a"
+export BUNDLER_EDITOR="subl $@ >/dev/null 2>&1 -a"
+export BUNDLER_EDITOR="subl $@ >/dev/null 2>&1 -a"
+export BUNDLER_EDITOR="subl $@ >/dev/null 2>&1 -a"
+export BUNDLER_EDITOR="subl $@ >/dev/null 2>&1 -a"
+export BUNDLER_EDITOR="subl $@ >/dev/null 2>&1 -a"
+export BUNDLER_EDITOR="subl $@ >/dev/null 2>&1 -a"
+
+export NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # This loads nvm
+
+# Necessary for Android Studio/React Native
+export ANDROID_HOME=$HOME/Android/Sdk
+export PATH=$PATH:$ANDROID_HOME/emulator
+export PATH=$PATH:$ANDROID_HOME/tools
+export PATH=$PATH:$ANDROID_HOME/tools/bin
+export PATH=$PATH:$ANDROID_HOME/platform-tools
+
+```
