--- a/content/dev/texteditor.mdx
+++ b/content/dev/texteditor.mdx
@@ -18,54 +18,53 @@ sudo apt install -y sublime-text
 Plugins offer new and expanded functionalities. `Package Control` must be intalled
 first.
 
-- Sublime plugins
->A File Icon
->
->AdvancedNewFile
->
->Alignment
->
->All Autocomplete
->
->Auto FileName
->
->Babel
->
->Emmet
->
->ERB Snippets
->
->Git
->
->Latest Migration
->
->MagicPython
->
->Package Control
->
->SCSS
->
->SublimeLinter
->
->SublimeLinter-rubocop
->
->BracketHighlighter
->
->Color Highlight
->
->ESLint
->
->GitGutter
->
->JsPrettier
->
->PyV8
->
->React Native Autocomplete
->
->SideBarEnhancements
->
->SideBarMenuAdvanced
->
->Sublime ES6 React Redux
+## Sublime plugins
+- A File Icon
 
+- AdvancedNewFile
+
+- Alignment
+
+- All Autocomplete
+
+- Auto FileName
+
+- Babel
+
+- Emmet
+
+- ERB Snippets
+
+- Git
+
+- Latest Migration
+
+- MagicPython
+
+- Package Control
+
+- SCSS
+
+- SublimeLinter
+
+- SublimeLinter-rubocop
+
+- BracketHighlighter
+
+- Color Highlight
+
+- ESLint
+
+- GitGutter
+
+- JsPrettier
+
+- PyV8
+
+- React Native Autocomplete
+
+- SideBarEnhancements
+
+- SideBarMenuAdvanced
+
+- Sublime ES7 React Redux
