--- a/content/dev/ruby.mdx
+++ b/content/dev/ruby.mdx
@@ -30,7 +30,7 @@ rbenv global 2.6.6
 ruby -v
 ```
 
-- Most common gems
+## Most common gems
 ```
 gem install rake bundler rspec rubocop rubocop-performance pry pry-byebug hub colored octokit
 ```
