--- a/content/dev/terminal.mdx
+++ b/content/dev/terminal.mdx
@@ -6,32 +6,32 @@ description: "Config for terminal"
 I am fond of working with Terminator as terminal emulator and zsh as my shell.
 So, first we need  to install these two:
 
-- Terminator
+## Terminator
 ```
 sudo apt install terminator
 ```
 
-- ohmyzsh
+## ohmyzsh
 ```
 sudo apt install -y zsh curl vim nodejs imagemagick jq
 sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
 sudo reboot
 ```
 
-- ohmyzsh plugins
-> gitfast
->
-> last-working-dir
->
-> common-aliases
->
-> sublime
->
-> zsh-syntax-highlighting
->
-> history-substring-search
+## ohmyzsh plugins
+- gitfast
 
-- zshrc config file
+- last-working-dir
+
+- common-aliases
+
+- sublime
+
+- zsh-syntax-highlighting
+
+- history-substring-search
+
+## zshrc config file
 ```shell
 ZSH=$HOME/.oh-my-zsh
 
