--- a/content/dev/misc.mdx
+++ b/content/dev/misc.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Misc Tools"
-description: "Instrucions for the installation of Yarn, Postman, openjdk, gatsby"
+description: "Instructions for the installation of Yarn, Postman, openjdk, gatsby"
 ---
 
 ## Yarn
