added instructions for macos

--- a/content/dev.mdx
+++ b/content/dev.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'WebDev Setup'
-description: 'Basic tools for web development'
+title: "WebDev Setup (Linux)"
+description: "Basic tools for web development"
 ---
 
 This is a compilation of tips and tricks for setting up the necessary tools for
@@ -13,7 +13,9 @@ These are some essential libraries/tools for web development:
 ```
 sudo apt install -y git
 ```
+
 ## Create ssh key
+
 ```
 mkdir -p ~/.ssh && ssh-keygen -t ed25519 -o -a 100 -f ~/.ssh/id_ed25519 -C "TYPE_YOUR_EMAIL@HERE.com"
 # Retrieve key
@@ -23,7 +25,9 @@ ssh -T git@github.com
 # In case of error
 ssh-add ~/.ssh/id_ed25519
 ```
+
 ## Postgresql
+
 ```
 sudo apt install -y postgresql postgresql-contrib libpq-dev build-essential
 sudo -u postgres psql --command "CREATE ROLE `whoami` LOGIN createdb;"
