added pages for yt, arduino and roms

--- a/content/yt.mdx
+++ b/content/yt.mdx
@@ -2,6 +2,7 @@
 title: "Youtube"
 description: "Ripping video and audio from streaming sites"
 ---
+
 ## youtube-dl
 
 Hasn't received updates for a while. Some things don't work anymore. Project abandoned?
@@ -15,6 +16,7 @@ sudo chmod a+rx /usr/local/bin/youtube-dl
 ```
 
 Update
+
 ```
 youtube-dl -U
 ```
@@ -32,8 +34,20 @@ sudo chmod a+rx /usr/local/bin/yt-dlp
 ```
 
 Update
+
 ```
 yt-dlp -U
+```
+
+## macOS
+
+```
+# install youtube-dl
+brew install youtube-dl
+# install yt-dlp
+brew install yt-dlp
+# update
+brew upgrade yt-dlp
 ```
 
 ## Batch Files
